--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Update apt
         run: |
-          apt update
+          sudo apt update
           
       # - name: Release
       #   uses: softprops/action-gh-release@v2
