--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,45 @@ jobs:
       - name: Update apt
         run: |
           sudo apt update
+          echo "**** install runtime packages ****"
+          apt install -y --no-install-recommends lxterminal \
+          nano \
+          wget \
+          openssh-client \
+          rsync \
+          ca-certificates \
+          xdg-utils \
+          htop \
+          tar \
+          xzip \
+          gzip \
+          bzip2 \
+          zip \
+          unzip
+          echo "**** install rmlint ****" && \
+          apt install -y --no-install-recommends \
+          scons \
+          python3-sphinx \
+          python3-gi-cairo \
+          python3-nose \
+          python-xdg \
+          gettext build-essential
+          echo "**** install optional dependencies for more features ****"
+          apt install -y --no-install-recommends \
+          libelf-dev \
+          libglib2.0-dev \
+          libblkid-dev \
+          libjson-glib-1.0 \
+          libjson-glib-dev
+          echo "**** install optional dependencies for the GUI ****"
+          apt install -y --no-install-recommends \
+          python3-gi \
+          gir1.2-rsvg \
+          gir1.2-gtk-3.0 \
+          python3-cairo \
+          gir1.2-polkit-1.0 \
+          gir1.2-gtksource-3.0 \
+          dbus-x11
           
       # - name: Release
       #   uses: softprops/action-gh-release@v2
