--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,45 +11,17 @@ jobs:
       - name: Update apt
         run: |
           sudo apt update
-          echo "**** install runtime packages ****"
-          sudo apt install -y --no-install-recommends lxterminal \
-          nano \
-          wget \
-          openssh-client \
-          rsync \
-          ca-certificates \
-          xdg-utils \
-          htop \
-          tar \
-          xzip \
-          gzip \
-          bzip2 \
-          zip \
-          unzip
-          echo "**** install rmlint ****" && \
-          sudo apt install -y --no-install-recommends \
-          scons \
-          python3-sphinx \
-          python3-gi-cairo \
-          python3-nose \
-          python-xdg \
-          gettext build-essential
-          echo "**** install optional dependencies for more features ****"
-          sudo apt install -y --no-install-recommends \
-          libelf-dev \
-          libglib2.0-dev \
-          libblkid-dev \
-          libjson-glib-1.0 \
-          libjson-glib-dev
-          echo "**** install optional dependencies for the GUI ****"
-          sudo apt install -y --no-install-recommends \
-          python3-gi \
-          gir1.2-rsvg \
-          gir1.2-gtk-3.0 \
-          python3-cairo \
-          gir1.2-polkit-1.0 \
-          gir1.2-gtksource-3.0 \
-          dbus-x11
+          # Ubuntu-only:
+          sudo apt install software-properties-common && add-apt-repository universe
+          sudo apt install git scons pkgconf gettext build-essential
+          # Optional dependencies for more features:
+          sudo apt install libelf-dev libglib2.0-dev libblkid-dev libjson-glib-1.0-0 libjson-glib-dev
+          # Optional dependencies for building documentation:
+          $ sudo apt install python3-sphinx python3-sphinx-bootstrap-theme
+          # Optional dependencies for the GUI:
+          $ sudo apt install python3-setuptools python3-gi-cairo gir1.2-gtksource-4 gir1.2-polkit-1.0 gir1.2-rsvg-2.0 python3-colorlog
+          # Optional dependancies for tests:
+          $ sudo apt install python3-pytest python3-psutil python3-xattr
           
       # - name: Release
       #   uses: softprops/action-gh-release@v2
