--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,11 +17,11 @@ jobs:
           # Optional dependencies for more features:
           sudo apt install libelf-dev libglib2.0-dev libblkid-dev libjson-glib-1.0-0 libjson-glib-dev
           # Optional dependencies for building documentation:
-          $ sudo apt install python3-sphinx python3-sphinx-bootstrap-theme
+          sudo apt install python3-sphinx python3-sphinx-bootstrap-theme
           # Optional dependencies for the GUI:
-          $ sudo apt install python3-setuptools python3-gi-cairo gir1.2-gtksource-4 gir1.2-polkit-1.0 gir1.2-rsvg-2.0 python3-colorlog
+          sudo apt install python3-setuptools python3-gi-cairo gir1.2-gtksource-4 gir1.2-polkit-1.0 gir1.2-rsvg-2.0 python3-colorlog
           # Optional dependancies for tests:
-          $ sudo apt install python3-pytest python3-psutil python3-xattr
+          sudo apt install python3-pytest python3-psutil python3-xattr
           
       # - name: Release
       #   uses: softprops/action-gh-release@v2
