--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Update apt
         run: |
-          sudo apt update
+          apt update
           # Ubuntu-only:
           apt install software-properties-common && add-apt-repository universe
           apt install git scons pkgconf gettext build-essential
