--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,16 +15,16 @@ jobs:
         run: |
           apt update
           # Ubuntu-only:
-          apt install software-properties-common && add-apt-repository universe
-          apt install git scons pkgconf gettext build-essential
+          apt install -y software-properties-common && add-apt-repository universe
+          apt install -y git scons pkgconf gettext build-essential
           # Optional dependencies for more features:
-          apt install libelf-dev libglib2.0-dev libblkid-dev libjson-glib-1.0-0 libjson-glib-dev
+          apt install -y libelf-dev libglib2.0-dev libblkid-dev libjson-glib-1.0-0 libjson-glib-dev
           # Optional dependencies for building documentation:
-          apt install python3-sphinx python3-sphinx-bootstrap-theme
+          apt install -y python3-sphinx python3-sphinx-bootstrap-theme
           # Optional dependencies for the GUI:
-          apt install python3-setuptools python3-gi-cairo gir1.2-gtksource-4 gir1.2-polkit-1.0 gir1.2-rsvg-2.0 python3-colorlog
+          apt install -y python3-setuptools python3-gi-cairo gir1.2-gtksource-4 gir1.2-polkit-1.0 gir1.2-rsvg-2.0 python3-colorlog
           # Optional dependancies for tests:
-          apt install python3-pytest python3-psutil python3-xattr
+          apt install -y python3-pytest python3-psutil python3-xattr
           
       # - name: Release
       #   uses: softprops/action-gh-release@v2
