--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           apt install -y software-properties-common && add-apt-repository universe
           apt install -y git scons pkgconf gettext build-essential
           # Optional dependencies for more features:
-          apt install -y libelf-dev libglib2.0-dev libblkid-dev libjson-glib-1.0-0 libjson-glib-dev
+          apt install -y libelf-dev libglib2.0-dev libblkid-dev libjson-glib-1.0-0 libjson-glib-dev jq
           # Optional dependencies for building documentation:
           apt install -y python3-sphinx python3-sphinx-bootstrap-theme
           # Optional dependencies for the GUI:
