--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,11 +62,11 @@ jobs:
           
           # Build the .deb
           dpkg-deb --build "$pkg_name"
-      # - name: Release
-      #   uses: softprops/action-gh-release@v2
-      #   with:
-      #     token: ${{ secrets.GITHUB_TOKEN }}
-      #     tag_name: v${{ env.VERSION }}
-      #     make_latest: true
-      #     files: |
-      #       *.deb
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          tag_name: v${{ env.VERSION }}
+          make_latest: true
+          files: |
+            *.deb
