--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -11,25 +11,26 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Update apt
+      - name: Install build dependencies
         run: |
-          apt update
-      - name: Install Ubuntu-only dependencies
-        run: |
-          apt install -y software-properties-common && add-apt-repository universe
-          apt install -y git scons pkgconf gettext build-essential jq
+          apk add --no-cache git scons pkgconf gettext build-base jq
+
       - name: Install optional dependencies for more features
         run: |
-          apt install -y libelf-dev libglib2.0-dev libblkid-dev libjson-glib-1.0-0 libjson-glib-dev
+          apk add --no-cache elfutils-dev glib-dev util-linux-dev json-glib-dev
+
       - name: Install optional dependencies for building documentation
         run: |
-          apt install -y python3-sphinx python3-sphinx-bootstrap-theme
+          apk add --no-cache python3 py3-sphinx py3-sphinx-bootstrap-theme
+
       - name: Install optional dependencies for the GUI
         run: |
-          apt install -y python3-setuptools python3-gi-cairo gir1.2-gtksource-4 gir1.2-polkit-1.0 gir1.2-rsvg-2.0 python3-colorlog
-      - name: Install optional dependancies for tests
+          apk add --no-cache python3-setuptools py3-cairo py3-gi py3-gobject gtk+3.0 polkit rsvg python3-colorlog
+
+      - name: Install optional dependencies for tests
         run: |
-          apt install -y python3-pytest python3-psutil python3-xattr
+          apk add --no-cache py3-pytest py3-psutil py3-xattr
+
       - name: Build
         run: |
           #!/bin/sh
