--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -13,6 +13,10 @@ jobs:
         uses: actions/checkout@v4
       - name: Install build dependencies
         run: |
+          echo "http://dl-cdn.alpinelinux.org/alpine/v3.22/main" > /etc/apk/repositories
+          echo "http://dl-cdn.alpinelinux.org/alpine/v3.22/community" >> /etc/apk/repositories
+          apk update
+
           apk add --no-cache git scons pkgconf gettext build-base jq
 
       - name: Install optional dependencies for more features
@@ -26,7 +30,7 @@ jobs:
 
       - name: Install optional dependencies for the GUI
         run: |
-          apk add --no-cache python3-setuptools py3-cairo py3-gi py3-gobject gtk+3.0 polkit rsvg python3-colorlog
+          apk add --no-cache py3-setuptools py3-cairo py3-gi py3-gobject3 gtk+3.0 polkit librsvg py3-colorlog
 
       - name: Install optional dependencies for tests
         run: |
