--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Install optional dependencies for the GUI
         run: |
-          apk add --no-cache py3-setuptools py3-cairo py3-gi py3-gobject3 gtk+3.0 polkit librsvg py3-colorlog
+          apk add --no-cache py3-setuptools py3-cairo py3-gobject3 gtk+3.0 polkit librsvg py3-colorlog
 
       - name: Install optional dependencies for tests
         run: |
