--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           apk add --no-cache py3-pytest py3-psutil
           apk add --no-cache py3-pip
-          pip install sphinx-bootstrap-theme pyxattr
+          pip install --break-system-packages sphinx-bootstrap-theme pyxattr
       - name: Build
         run: |
           #!/bin/sh
