--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -17,7 +17,7 @@ jobs:
           echo "http://dl-cdn.alpinelinux.org/alpine/v3.22/community" >> /etc/apk/repositories
           apk update
 
-          apk add --no-cache git scons pkgconf gettext build-base jq curl wget
+          apk add --no-cache git scons pkgconf gettext build-base jq curl wget bash
 
       - name: Install optional dependencies for more features
         run: |
