--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -90,6 +90,14 @@ jobs:
           }
           EOF
           
+          # Detect the builder key
+          builder_key=$(ls /home/builder/.abuild/*.rsa | head -n1)
+          
+          # Configure abuild to use it
+          echo "PACKAGER_PRIVKEY=\"$builder_key\"" >> /home/builder/.abuild/abuild.conf
+          chown builder:builder /home/builder/.abuild/abuild.conf
+          chmod 600 /home/builder/.abuild/abuild.conf
+          
           # Build the package as builder
           sudo -u builder bash -c "cd /home/builder/src/rmlint && abuild -r"
           
