--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -46,17 +46,21 @@ jobs:
           mkdir -p /home/builder/src /home/builder/.abuild
           chown -R builder:builder /home/builder
           
+          # Generate abuild key
           sudo abuild-keygen -a -i -n
           mv /root/.abuild/* /home/builder/.abuild/
           chown -R builder:builder /home/builder/.abuild
           
+          # Fetch latest rmlint release
           tag=$(curl -s https://api.github.com/repos/sahib/rmlint/releases/latest | jq -r .tag_name)
           version="${tag#v}"
           echo "TAG=$tag"
           
+          # Clone source
           git clone --branch "$tag" --depth 1 https://github.com/sahib/rmlint.git /home/builder/src/rmlint
           chown -R builder:builder /home/builder/src/rmlint
           
+          # Create APKBUILD pointing to local source
           cat > /home/builder/src/rmlint/APKBUILD <<EOF
           # Maintainer: Your Name <you@example.com>
           pkgname=rmlint
@@ -68,29 +72,30 @@ jobs:
           license="GPL-3.0-or-later"
           depends="gtk+3.0 py3-gobject3 py3-cairo"
           makedepends="scons git pkgconf gettext"
-          source="https://github.com/sahib/rmlint/archive/refs/tags/v\$pkgver.tar.gz"
-          sha512sums="SKIP"
           
           build() {
-              cd "\$srcdir/rmlint-\$pkgver"
-              scons config
+              true  # already built manually or via scons
           }
           
           package() {
-              cd "\$srcdir/rmlint-\$pkgver"
+              cd "\$srcdir/rmlint"
               scons --prefix="\$pkgdir/usr" install
           }
           EOF
           
+          # Configure abuild to use builder key
           builder_key=$(ls /home/builder/.abuild/*.rsa | head -n1)
           echo "PACKAGER_PRIVKEY=\"$builder_key\"" >> /home/builder/.abuild/abuild.conf
           chown builder:builder /home/builder/.abuild/abuild.conf
           chmod 600 /home/builder/.abuild/abuild.conf
           
-          sudo -u builder bash -c "cd /home/builder/src/rmlint && abuild -r"
+          # Build the APK skipping fetch/checksum
+          sudo -u builder bash -c "cd /home/builder/src/rmlint && abuild -r -F"
           
+          # Locate the resulting APK
           apk_file=$(find /home/builder/packages/ -name "*.apk" | head -n1)
           echo "APK_FILE=$apk_file"
+
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
