--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -43,6 +43,9 @@ jobs:
           apk add --no-cache abuild sudo scons git pkgconf gettext fakeroot
           
           adduser -D builder
+          addgroup abuild
+          adduser builder abuild
+
           mkdir -p /home/builder/src /home/builder/.abuild
           chown -R builder:builder /home/builder
           
