--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -58,12 +58,12 @@ jobs:
           version="${tag#v}"
           echo "TAG=$tag"
           
-          # Prepare source directory and download tarball
+          # Create source directory and download tarball
           mkdir -p /home/builder/src/rmlint/src
           curl -L -o /home/builder/src/rmlint/src/rmlint-$version.tar.gz "https://github.com/sahib/rmlint/archive/refs/tags/v$version.tar.gz"
           chown -R builder:builder /home/builder/src/rmlint
           
-          # Create APKBUILD
+          # Create APKBUILD pointing to local tarball (without checksum yet)
           cat > /home/builder/src/rmlint/APKBUILD <<EOF
           pkgname=rmlint
           pkgver=$version
@@ -75,7 +75,7 @@ jobs:
           depends="gtk+3.0 py3-gobject3 py3-cairo"
           makedepends="scons git pkgconf gettext"
           
-          source="file://rmlint-$version.tar.gz"
+          source="file://src/rmlint-$version.tar.gz"
           
           build() {
               true
@@ -93,7 +93,7 @@ jobs:
           chown builder:builder /home/builder/.abuild/abuild.conf
           chmod 600 /home/builder/.abuild/abuild.conf
           
-          # Generate checksums
+          # Generate checksum for the tarball
           sudo -u builder bash -c "cd /home/builder/src/rmlint && abuild checksum"
           
           # Build the APK
