--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -75,17 +75,18 @@ jobs:
           depends="gtk+3.0 py3-gobject3 py3-cairo"
           makedepends="scons git pkgconf gettext"
           source="https://github.com/sahib/rmlint/archive/refs/tags/v${pkgver}.tar.gz"
-          builddir="$srcdir/$pkgname-$pkgver"
+            builddir="$srcdir/$pkgname-$pkgver"
+          
           build() {
-            cd "$builddir"
-            scons config
-            }
-              
-              package() {
-                  cd "\$srcdir/rmlint-$version"
-                  scons --prefix="\$pkgdir/usr" install
-              }
-              EOF
+              cd "$builddir"
+              scons config
+          }
+          
+          package() {
+              cd "$builddir"
+              scons --prefix="$pkgdir/usr/local" install
+          }
+          EOF
           
           # Configure abuild to use builder key
           builder_key=$(ls /home/builder/.abuild/*.rsa | head -n1)
