--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -74,7 +74,7 @@ jobs:
           license="GPL-3.0-or-later"
           depends="gtk+3.0 py3-gobject3 py3-cairo"
           makedepends="scons git pkgconf gettext"
-          source="https://github.com/sahib/rmlint/archive/refs/tags/v$pkgver.tar.gz"
+          source="https://github.com/sahib/rmlint/archive/refs/tags/v\$pkgver.tar.gz"
             builddir="$srcdir/$pkgname-$pkgver"
           
           build() {
