--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -84,7 +84,7 @@ jobs:
           
           package() {
               cd "\$builddir"
-              scons --prefix="\$pkgdir/usr/local" install
+              scons --prefix="\$pkgdir/usr" install
           }
           EOF
           
