--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -84,6 +84,8 @@ jobs:
           
           package() {
               cd "\$builddir"
+              gzip -9 "\$pkgdir/usr/share/man/man1/rmlint.1"
+              rm -rf "\$pkgdir/usr/lib/python*/__pycache__"
               scons --prefix="\$pkgdir/usr" install
           }
           EOF
